<resources>
    // CONFIG
    <string name="app_name">Centrum Pomocy Technicznej</string>
    <string name="short_app_name">CPT</string>

    // BUTTONS
    <string name="edit_fault">Edytuj zgłoszenie</string>
    <string name="all_faults">Wyszukaj złoszenie</string>
    <string name="logout">Wyloguj się</string>
    <string name="contact_administration">Kontakt z administracją</string>
    <string name="alarm_numbers">Numery alarmowe</string>
    <string name="my_faults">Twoje zgłoszenia</string>
    <string name="delete_fault">Usuń zgłoszenie</string>
    <string name="scan_code">Zeskanuj kod kreskowy</string>
    <string name="about_program">O programie</string>
    <string name="add_fault">Dodaj zgłoszenie</string>
    <string name="search">Wyszukaj</string>

    // ABOUT FAULTS
    <string name="description">Opis:</string>
    <string name="topic">Temat:</string>
    <string name="datetime">Czas zgłoszenia:</string>
    <string name="obj_number">Numer przedmiotu:</string>
    <string name="user">Użytkownik:</string>
    <string name="status">Status zgłoszenia:</string>
    <string name="fault_number">Numer zgłoszenia:</string>
    <string name="phone_number">Numer telefonu:</string>
    <string name="room_number">Numer sali:</string>
    <string name="obj_name">Nazwa przedmiotu:</string>

    // REPORT
    <string name="manual">Ręcznie</string>
    <string name="auto">Przy pomocy aparatu</string>

    // LOGIN
    <string name="index_number">Numer indeksu:</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj</string>

    // INFO
    <string name="about_project" translatable="false">Projekt napisany pod katem zaliczenia z przedmiotów:\n
        - Przetwarzanie w chmurze dla aplikacji mobilnych\n
        - Systemy operacyjne na platformach mobilnych.\n
        Równolegle wykonywana jest aplikacja webowa o tej samej tematyce, która będzie
        współpracowała z aplikacją mobilną.\n
        Początkowo aplikacja zostanie wdrożona jedynie w Centrum Technologii Informatycznych
        w celach testowych.\n
        \n
        Wykorzystane technologie:\n
        - MySQL\n
        - Android Studio (Java 8)\n
        - OpenCV for Java (rozpoznawanie obrazu)\n
        - framework zxing\n
        - dostęp do wirtualnej maszyny w budynku CTI\n
        \n
        Projekt będzie bazą dla pracy inżynierskiej.</string>
    <string name="emergency_contact" translatable="false">
        Numery alarmowe:\n
        - numer alarmowy: 112\n
        - Pogotowie Rzeczne: 984\n
        - Ratownictwo Morskie i Górskie: 985\n
        - Straż Miejska: 986\n
        - woj. zarządzanie kryzysowe: 987\n
        - Pogotowie Energetyczne: 991\n
        - Pogotowie Gazowe: 992\n
        - Pogotowie Ciepłownicze: 993\n
        - Pogotowie Wodociągowe: 994\n
        - Policja: 997\n
        - Straż Pożarna: 998\n
        - Pogotowie Ratunkowe: 999\n
    </string>
    <string name="administration_contact" translatable="false">
        Kontakt z administracją Centrum Technologii Informatycznych:\n
        - email: cti@adm.p.lodz.pl\n
        - telefon: + 48 42 631 24 40\n
    </string>

</resources>
