<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_menu">
        <!-- HEADER -->
        <include layout="@layout/header"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/app_name_layout"
            android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/menu_left"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageButton
                        style="@style/AppTheme.ImageButton"
                        android:id="@+id/btn_report_fault"
                        android:src="@drawable/add_icon"/>
                    <TextView
                        style="@style/AppTheme.SmallTextView"
                        android:text="@string/add_fault"/>
                    <ImageButton
                        style="@style/AppTheme.ImageButton"
                        android:id="@+id/btn_show_faults"
                        android:src="@drawable/my_icon" />
                    <TextView
                        style="@style/AppTheme.SmallTextView"
                        android:text="@string/my_faults"/>
                    <ImageButton
                        style="@style/AppTheme.ImageButton"
                        android:id="@+id/btn_alarms"
                        android:src="@drawable/emergency_icon" />
                    <TextView
                        style="@style/AppTheme.SmallTextView"
                        android:text="@string/alarm_numbers"/>
                    <ImageButton
                        style="@style/AppTheme.ImageButton"
                        android:id="@+id/btn_contact"
                        android:src="@drawable/contact_icon" />
                    <TextView
                        style="@style/AppTheme.SmallTextView"
                        android:text="@string/contact_administration"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/menu_right"
                    android:layout_weight="1"
                    android:layout_toRightOf="@+id/menu_left"
                    android:orientation="vertical">
                    <ImageButton
                        style="@style/AppTheme.ImageButton"
                        android:id="@+id/btn_edit_fault"
                        android:src="@drawable/edit_icon" />
                    <TextView
                        style="@style/AppTheme.SmallTextView"
                        android:text="@string/edit_fault"/>
                    <ImageButton
                        style="@style/AppTheme.ImageButton"
                        android:id="@+id/btn_local_faults"
                        android:src="@drawable/search_icon" />
                    <TextView
                        style="@style/AppTheme.SmallTextView"
                        android:text="@string/all_faults"/>
                    <ImageButton
                        style="@style/AppTheme.ImageButton"
                        android:id="@+id/btn_about"
                        android:src="@drawable/info_icon" />
                    <TextView
                        style="@style/AppTheme.SmallTextView"
                        android:text="@string/about_program"/>
                    <ImageButton
                        style="@style/AppTheme.ImageButton"
                        android:id="@+id/btn_logout"
                        android:src="@drawable/logout_icon" />
                    <TextView
                        style="@style/AppTheme.SmallTextView"
                        android:text="@string/logout"/>
                </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>