<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_menu">
        <!-- HEADER -->
        <include layout="@layout/header"
            android:id="@+id/header"/>
        <LinearLayout
            android:id="@+id/linear"
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|top"
                android:background="@color/colorAccent"
                android:orientation="horizontal"
                android:baselineAligned="false">
            </LinearLayout>
            <EditText
                style="@style/AppTheme.EditText"
                android:maxLength="20"

                android:hint="@string/fault_number"
                android:id="@+id/et_id" />
            <EditText
                style="@style/AppTheme.EditText"
                android:maxLength="20"
                android:hint="@string/user"
                android:id="@+id/et_issuer" />
            <EditText
                style="@style/AppTheme.EditText"
                android:maxLength="50"
                android:hint="@string/topic"
                android:id="@+id/et_topic" />
            <EditText
                style="@style/AppTheme.EditText"
                android:maxLength="10"
                android:hint="@string/obj_number"
                android:digits="0123456789"
                android:inputType="number"
                android:id="@+id/et_obj_no" />
            <EditText
                style="@style/AppTheme.EditText"
                android:maxLength="50"
                android:hint="@string/obj_name"
                android:id="@+id/et_obj_name" />
            <EditText
                style="@style/AppTheme.EditText"
                android:maxLength="5"
                android:inputType="phone"
                android:hint="@string/room_number"
                android:digits="0123456789."
                android:id="@+id/et_room_no" />
        <LinearLayout
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="fill"
            android:textSize="17sp">
            <TextView
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/colorBlack"
                android:textSize="17sp"/>
            <CheckBox android:id="@+id/registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zgłoszone"
                />
            <CheckBox android:id="@+id/ongoing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="W trakcie naprawy"/>
            <CheckBox android:id="@+id/solved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rozwiązane"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <Button
                    style="@style/AppTheme.ButtonWhite"
                    android:id="@+id/btn_search_fault"
                    android:text="@string/search" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>