<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_menu">
        <!-- HEADER -->
        <include layout="@layout/header"
            android:id="@+id/header"/>
        <LinearLayout
            android:id="@+id/linear"
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="30dp">
            <LinearLayout
                android:layout_below="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|top"
                android:background="@color/colorAccent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="5"
                    android:layout_gravity="fill_horizontal|left"
                    android:id="@+id/id_layout" >
                    <TextView
                        style="@style/AppTheme.TextViewHalfScreenDarkBackground"
                        android:text="@string/fault_number"
                        android:id="@+id/tv_id_text" />
                    <TextView
                        style="@style/AppTheme.TextViewHalfScreenDarkBackground"
                        android:text="@string/user"
                        android:id="@+id/tv_issuer_text" />
                    <TextView
                        style="@style/AppTheme.TextViewHalfScreenDarkBackground"
                        android:text="@string/obj_number"
                        android:id="@+id/tv_object_number_text" />
                    <TextView
                        style="@style/AppTheme.TextViewHalfScreenDarkBackground"
                        android:text="@string/datetime"
                        android:id="@+id/tv_datetime_text" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="100"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_horizontal|right"
                    android:id="@+id/issuer_id_layout" >
                    <TextView
                        style="@style/AppTheme.TextViewHalfScreenWhiteBackground"
                        android:id="@+id/tv_id" />
                    <TextView
                        style="@style/AppTheme.TextViewHalfScreenWhiteBackground"
                        android:id="@+id/tv_issuer_id" />
                    <TextView
                        style="@style/AppTheme.TextViewHalfScreenWhiteBackground"
                        android:id="@+id/tv_object_number" />
                    <TextView
                        style="@style/AppTheme.TextViewHalfScreenWhiteBackground"
                        android:id="@+id/tv_datetime" />
                </LinearLayout>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="10dp"
                android:paddingLeft="15dp"
                android:maxLength="12"
                android:drawableLeft="@color/colorWhite"
                android:background="@color/colorWhite"
                android:gravity="fill"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:digits="0123456789+"
                android:id="@+id/et_phone_number" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="10dp"
                android:maxLength="50"
                android:drawableLeft="@color/colorWhite"
                android:background="@color/colorWhite"
                android:hint="@string/topic"
                android:id="@+id/et_topic"
                android:paddingLeft="15dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@color/colorWhite"
                android:background="@color/colorWhite"
                android:hint="@string/description"
                android:id="@+id/et_description"
                android:paddingLeft="15dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <Button
                    style="@style/AppTheme.ButtonWhite"
                    android:id="@+id/btn_edit"
                    android:text="@string/edit_fault" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <Button
                    style="@style/AppTheme.ButtonWhite"
                    android:id="@+id/btn_delete"
                    android:text="@string/delete_fault" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>